@@ -4,14 +4,14 @@ RMD160 141c5d412c50dcb106654b4078cbaf379b468130 files/eclipse-3.2 1145
 SHA256 920b48ed98bc18f6e90769fe084eced46304c4c1a8b3999c5644297f437b1cbd files/eclipse-3.2 1145
 DIST eclipse-sdk-3.2.1-r1-patches.tar.bz2 85951 RMD160 55a0f98229feb47d936acbcdcf7ad42074ebdb5c SHA1 4af81d8615dbfbd771136c441ee8a7b53096b468 SHA256 fa9f8d047d8375ab55eaca12c110bd9faf9eb5452af2a70d038afd5a6b4b5171
 DIST eclipse-sourceBuild-srcIncluded-3.2.1.zip 82433420 RMD160 9648176b79adac7217371e5b8dee7aeb4cd458db SHA1 a27bae4ff9f866a1fab995eae2da00ab2be5e840 SHA256 2d6a0628333d068b6ab678c42f925d71df1c003035543830a30e3ee80fb855c7
-EBUILD eclipse-sdk-3.2.1-r2.ebuild 23454 RMD160 284734d8ef58544b0836c73702b1f727e37f1d36 SHA1 662df22a35edfcc7087f16e42681f66c61863154 SHA256 9b2b43014c1bac37d3beb1f4f3b09814abc5ce6d2cd5b6e25512a5935cee7882
-MD5 0a98fa73627fa51b5b568260469a1c95 eclipse-sdk-3.2.1-r2.ebuild 23454
-RMD160 284734d8ef58544b0836c73702b1f727e37f1d36 eclipse-sdk-3.2.1-r2.ebuild 23454
-SHA256 9b2b43014c1bac37d3beb1f4f3b09814abc5ce6d2cd5b6e25512a5935cee7882 eclipse-sdk-3.2.1-r2.ebuild 23454
-MISC ChangeLog 486 RMD160 2457c808d3e85f8dc358f9417ce09003157ff7e0 SHA1 7f10012ef48d488edb1daecc734f7c8e2902b4a7 SHA256 5312ee9a3b16831691e8b93c287c540bb44dbcd5d05a80202f76396078e4a6b1
-MD5 9bfa6b9c17b8c3173f3a62839e5e6ebe ChangeLog 486
-RMD160 2457c808d3e85f8dc358f9417ce09003157ff7e0 ChangeLog 486
-SHA256 5312ee9a3b16831691e8b93c287c540bb44dbcd5d05a80202f76396078e4a6b1 ChangeLog 486
+EBUILD eclipse-sdk-3.2.1-r2.ebuild 23525 RMD160 314bc808bed2ece502cce376fd435ce45713f329 SHA1 e34b71b4ce3a36c8fdfeac11af15e3a18ed526c7 SHA256 f4c7b2d1b012ba7aeb2bdcf2ee181ae94f4b717bb448d4e8ce272c426df85847
+MD5 698dccc28fd5dc8eb21a10b170d8eccc eclipse-sdk-3.2.1-r2.ebuild 23525
+RMD160 314bc808bed2ece502cce376fd435ce45713f329 eclipse-sdk-3.2.1-r2.ebuild 23525
+SHA256 f4c7b2d1b012ba7aeb2bdcf2ee181ae94f4b717bb448d4e8ce272c426df85847 eclipse-sdk-3.2.1-r2.ebuild 23525
+MISC ChangeLog 584 RMD160 381d5e005b6bcc3260c31761ba359eb0881296b2 SHA1 ed88c1bdb9097423950bb380bb8be48f1fde5f5b SHA256 9682199945539c79ba0ea69b2f3234ded449c885c0ff2e86283e4a0ddbefe8b5
+MD5 f6a65ca0bd4b1fdc12b9b9e918d0fabb ChangeLog 584
+RMD160 381d5e005b6bcc3260c31761ba359eb0881296b2 ChangeLog 584
+SHA256 9682199945539c79ba0ea69b2f3234ded449c885c0ff2e86283e4a0ddbefe8b5 ChangeLog 584
 MD5 2364957019ebba24ca9af9631f7a86c8 files/digest-eclipse-sdk-3.2.1-r2 596
 RMD160 130025e444efc3a79b198baa4b673b49b117400f files/digest-eclipse-sdk-3.2.1-r2 596
 SHA256 da442cfe724dbdf31b936830117b876bff94378e5bbb0e1162d12ce590de0e82 files/digest-eclipse-sdk-3.2.1-r2 596
